--- a/assets/csss/style.css
+++ b/assets/csss/style.css
@@ -1,10 +1,11 @@
 ﻿/* Jquery DataTable ============================ */
 
 .dataTables_wrapper .dt-buttons a.dt-button {
-  background-color: #607D8B;
-  color: #fff;
-  padding: 7px 12px;
+  background-color: #2c2e2f;
+  color: #ffffff;
+  padding: 7px 7px;
   margin-right: 5px;
+  margin-top: 18px;
   text-decoration: none;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.16), 0 2px 10px rgba(0, 0, 0, 0.12);
   -webkit-border-radius: 2px;
@@ -13,6 +14,7 @@
   border-radius: 2px;
   border: none;
   font-size: 13px;
-  outline: none; }
+  outline: none;
+}
 
 
